# distributed-systems-energy-efficiency

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  compose-all.yml  compose.yml  pom.xml  rewrite.yml
loadtesting/: Dockerfile  compose.yml  locustfile.py  pyproject.toml  stats_analysis.ipynb
loadtesting/common/: feedservice.py  notificationservice.py  postservice.py  userservice.py  util.py
loadtesting/data/: Pod_Process Power Consumption (W) in Namespace_ All-data-as-joinbyfield-2024-07-07 17_55_22.csv  Server PDU Watt Overall Comsumption-data-2024-07-07 17_55_48.csv  Server PDU Watt Overall Comsumption-data-2024-07-07 22_05_01.csv  data_stats_history.csv
loadtesting/data/00-baseapp/2024-07-15/: containers.csv
loadtesting/data/00-baseapp/2024-07-15/10-12/: data_exceptions.csv  data_failures.csv  data_stats.csv  kepler.csv
loadtesting/data/00-baseapp/2024-07-15/14-16/: pdu.csv  (+3 more)
loadtesting/data/2024-07-07/20_26-21_04/: data_stats_history.csv  kepler.csv
loadtesting/data/2024-07-08/: data_stats_history.csv  kepler.csv  pdu.csv
loadtesting/data/2024-07-09/: data_stats.csv  data_stats_history.csv  kepler.csv  pdu.csv
loadtesting/data/2024-07-11/: data_stats.csv  data_stats_history.csv  kepler.csv  pdu.csv
loadtesting/data/2024-07-12/: data_stats.csv  data_stats_history.csv  kepler.csv  pdu.csv  service_metrics.csv
loadtesting/data/2024-07-13/: kepler.csv  service_metrics.csv
loadtesting/data/baseapp/2024-07-15/: average_response_times.csv  containers.csv  failures.csv
loadtesting/notebooks/: energy_efficiency.ipynb  locust.ipynb
(+291 files in other folders)
